--- a/src/components/App.css
+++ b/src/components/App.css
@@ -13,6 +13,10 @@ body {
     background-color: #000;
     color: #fff;
   }
+  a {
+    color: #fff;
+    text-decoration: none;
+  }
   body {
     margin: 0;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -89,9 +93,13 @@ body {
   .homeFeatProjects{
     flex-direction: row;
   }
-  .homeFeatProjects > article {
+  .homeFeatProjects > a {
     width: 23vw;
     height: 30vw;
+  }
+  .homeFeatProjects > a > article {
+    height: 100%;
+    width: 100%;
   }
   .homeGrid {
     display: grid;
@@ -201,7 +209,7 @@ body {
   .mainProjectSection, .heroImage {
     background-size: cover;
     background-repeat: no-repeat;
-    background-position: center;
+    background-position: top center;
     height: 85vh;
     display: flex;
     justify-content: space-between;
@@ -233,9 +241,9 @@ body {
       padding-right: 1em;
     }
   
-    .homeFeatProjects > article {
+    .homeFeatProjects > a {
       width: 100%;
       height: 400px;
-      margin-bottom: 20px;
+      margin-bottom: 40px;
     }
   }
