--- a/src/components/SinglePage.css
+++ b/src/components/SinglePage.css
@@ -33,12 +33,19 @@ h2 {
     padding-left: 2em;
     font-size: 0.8em; 
 }
+.otherBackButton {
+    color: #fff;
+    text-decoration: none;
+    flex: 0 1 auto;
+    padding-left: 2em;
+    font-size: 0.8em; 
+}
 #resumo + p > img + img {
     float: left;
     margin-left: -60px;
     width: 40%;
 }
-p, h2, table {
+p, h2, table, ul {
     max-width: 650px;
     margin-left: auto;
     margin-right: auto;
@@ -65,7 +72,7 @@ p:has(+ img) {
         z-index: 10;
         border-top: 1px solid rgba(255, 255, 255, 0.17);
     }
-    .backButton {
+    .backButton, .otherBackButton {
         flex: 0 1 auto;
         padding-left: 0;
     }
